--- a/style.css
+++ b/style.css
@@ -48,3 +48,9 @@ header h1 {
     border-radius: 20px;
     float: right;
 }
+
+@media (max-width: 992px) {
+    #pokol {
+        float: none;
+    }
+}
