"stíluslap hibák felderítése és eliminálási folyamat megkezdése"

--- a/style.css
+++ b/style.css
@@ -46,15 +46,14 @@ header h1 {
     color: var(--text);
     background-color: var(--primary);
     border-radius: 20px;
-    float: right;
+    /* float: right; */
 }
 
 @media (max-width: 576px) {
-    #pokol {
-        float: none;
-    }
+    /* #pokol  */
 }
 
 .row {
     background-color: #ff7f00;
+    justify-content: space-between;
 }
