--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
 }
 
 header h1 {
+    background-image: url(Képernyőkép\ 2023-10-02\ 100151.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     color: var(--text);
     text-align: center;
     padding: 20px;
@@ -50,4 +53,8 @@ table * {
 
 #lablec a:hover {
     font-size: large;
+}
+
+li {
+    list-style-type: upper-roman;
 }
