--- a/style.css
+++ b/style.css
@@ -82,3 +82,16 @@ li {
 #tablazat table {
     border: 1px solid var(--secondary);
 }
+
+.quote {
+    width: 40%;
+    color: var(--text);
+    background-color: var(--secondary);
+    margin: auto;
+    text-align: center;
+    font-size: xx-large;
+    font-style: italic;
+    font-weight: bold;
+    font-family: "Consolas";
+    border-radius: 10px;
+}
