--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li {
 #lablec a {
     color: var(--text);
     text-decoration: none;
-    font-size: medium;
+    font-size: large;
     background-color: var(--primary);
     border-radius: 5px;
     margin: 10px 0px;
@@ -61,7 +61,7 @@ li {
 }
 
 #lablec a:hover {
-    font-size: large;
+    font-size: x-large;
     opacity: 100%;
 }
 
