--- a/style.css
+++ b/style.css
@@ -95,3 +95,15 @@ li {
     font-family: "Consolas";
     border-radius: 10px;
 }
+
+@media (max-width: 992px) {
+    #bevezetes section, #pokol p {
+      font-size: x-large;
+    }
+  }
+
+@media (max-width: 580px) {
+    table {
+        overflow: scroll;
+    }
+}
