--- a/style.css
+++ b/style.css
@@ -95,3 +95,13 @@ li {
     font-family: "Consolas";
     border-radius: 10px;
 }
+
+#copyright {
+    display: block;
+    position: fixed;
+    right: 0px;
+    bottom: 6%;
+    height: 30px;
+    background-color: var(--secondary);
+    color: var(--text);
+}
