--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header h1 {
-    background-image: url(Képernyőkép\ 2023-10-02\ 100151.png);
+    background-image: url(./kepek/Képernyőkép\ 2023-10-02\ 100151.png);
     background-repeat: no-repeat;
     background-size: cover;
     color: var(--text);
@@ -105,6 +105,13 @@ li {
     height: 30px;
     background-color: var(--secondary);
     color: var(--text);
+}
+
+img {
+    margin: 3px;
+    padding-bottom: 12px;
+    padding-top: 10px;
+    width: 90%;
 }
 
 @media (max-width: 992px) {
