--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header h1 {
-    background-image: url(./kepek/Képernyőkép\ 2023-10-02\ 100151.png);
+    background-image: url(./Képernyőkép\ 2023-10-02\ 100151.png);
     background-repeat: no-repeat;
     background-size: cover;
     color: var(--text);
